[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iosea-wf"
version = "1.6.0"
description = "CLI for WFM product"
authors = [{ name = "BDS Data Management team", email = "bds-datamanagement@eviden.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "cloup==2.0.*",
  "yamllint==1.32.*",
]

[tool.setuptools.packages.find]
exclude = ["integration*", "tests*"]
namespaces = true

[project.scripts]
iosea-wf = "iosea_wf.iosea_wf:cli"

[project.optional-dependencies]
cip = [
  "mypy==0.910",
  "pytest==6.2.*",
  "pytest-cov==3.0.*",
  "pylint==2.14.*",
  "mkdocs==1.3.*",
]
